syntax = "proto3";

package chat;

option go_package = "golang-chat/proto/chat";

// Chat Service
service ChatService {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc ConnectChat(ConnectChatRequest) returns (ConnectChatResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

// Chat messages
message Chat {
  string id = 1;
  string name = 2;
  string created_by = 3;
  string created_at = 4;
  repeated string participants = 5;
}

message Message {
  string id = 1;
  string chat_id = 2;
  string user_id = 3;
  string content = 4;
  string created_at = 5;
}

message CreateChatRequest {
  string name = 1;
  string created_by = 2;
  repeated string participants = 3;
}

message CreateChatResponse {
  Chat chat = 1;
  string error = 2;
}

message ConnectChatRequest {
  string chat_id = 1;
  string user_id = 2;
}

message ConnectChatResponse {
  bool success = 1;
  string error = 2;
}

message SendMessageRequest {
  string chat_id = 1;
  string user_id = 2;
  string content = 3;
}

message SendMessageResponse {
  Message message = 1;
  string error = 2;
}

message GetMessagesRequest {
  string chat_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  string error = 2;
}
